# shkyegrad

./: .gitignore  LICENSE  README.md  pyproject.toml
sg/autograd/: tensor.py
sg/nn/: __init__.py  activations.py  data_loader.py  linear.py  losses.py  module.py  optimizer.py  tensor_dataset.py  utils.py
sg/nn/optimizers/: sgd.py
src/scorch/: __init__.py
src/scorch/datasets/: __init__.py  autoencoder_dataset.py  dataloader.py  simple_dataset.py
src/scorch/execution/: __init__.py  loggers.py  trainer.py
src/scorch/nn/: __init__.py  activations.py  conv2d.py  dropout.py  flatten.py  linear.py  losses.py
src/scorch/optim/: optimizer.py  sgd.py
src/scorch/utils/: __init__.py  math.py  plot.py  profiler.py
tests/: test_autodiff.py  test_losses.py  test_module.py  test_tensor.py
